--- a/nginx/sites-available/isuumo.conf
+++ b/nginx/sites-available/isuumo.conf
@@ -3,6 +3,29 @@ server {
     listen 80 default_server;
     listen [::]:80 default_server;
 
+    # block bot
+    # /ISUCONbot(-Mobile)?/
+    # /ISUCONbot-Image\//
+    # /Mediapartners-ISUCON/
+    # /ISUCONCoffee/
+    # /ISUCONFeedSeeker(Beta)?/
+    # /isubot/
+    # /Isupider/
+    # /Isupider(-image)?\+/
+    if ( $http_user_agent ~ "(ISUCONbot|Mediapartners-ISUCON|ISUCONCoffeeISUCONFeedSeeker|isubot|ISupider)" ) {
+        return 503;
+    }
+
+    # /crawler \(https:\/\/isucon\.invalid\/(support\/faq\/|help\/jp\/)/
+    if ( $http_user_agent ~ "crawler \(https://isucon\.invalid/(support/faq/|help/jp/)" ) {
+        return 503;
+    }
+
+    # /(bot|crawler|spider)(?:[-_ .\/;@()]|$)/i
+    if ( $http_user_agent ~* "(bot|crawler|spider)(?:[-_ ./;@()]|$)" ) {
+        return 503;
+    }
+
     location /api {
             proxy_pass http://localhost:1323;
     }
