--- a/nginx/sites-available/isuumo.conf
+++ b/nginx/sites-available/isuumo.conf
@@ -11,8 +11,11 @@ server {
             proxy_pass http://localhost:1323;
     }
 
+    location ~* \.(gif|jpe?g|png|ico|svg|css|js)$ {
+            add_header Cache-Control "s-maxage=86400, public";
+    }
+
     location / {
             root /www/data;
-            add_header Cache-Control "max-age=3600, public";
     }
 }
