--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,7 +14,7 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    client_body_buffer_size 128k;
+    client_body_buffer_size 2m;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
